--- a/composer.json
+++ b/composer.json
@@ -66,5 +66,9 @@
             "allow-contrib": false,
             "require": "6.4.*"
         }
+    },
+    "require-dev": {
+        "symfony/maker-bundle": "^1.61",
+        "symfony/web-profiler-bundle": "6.4.*"
     }
 }
