--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.6.0",
         "bootstrap": "^5.3.3"
     }
 }
