--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,38 +1,38 @@
 security:
-    # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
-    # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
+
     providers:
         app_user_provider:
             id: App\Security\UserProvider
+
     firewalls:
         dev:
-            pattern: ^/(_(profiler|wdt)|css|images|js)/
+            pattern: ^/(_(profiler|wdt)|css|images|js)/$
             security: false
         main:
             lazy: true
             provider: app_user_provider
             logout:
                 path: app_logout
+                target: app_login
             form_login:
                 login_path: app_login
                 check_path: app_login
                 enable_csrf: true
                 username_parameter: name-user
                 password_parameter: pswd-user
+            # activation des utilisateurs connectés
+            remember_me:
+                secret: '%kernel.secret%'
+                lifetime: 604800 # 7 jours en secondes
 
-            # activate different ways to authenticate
-            # https://symfony.com/doc/current/security.html#the-firewall
-
-            # https://symfony.com/doc/current/security/impersonating_user.html
-            # switch_user: true
-
-    # Easy way to control access for large sections of your site
-    # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/profil, roles: ROLE_USER }
+        - { path: ^/profil/enseignant, roles: ROLE_TEACHER }
+        - { path: ^/profil/etudiant, roles: ROLE_STUDENT }
+        - { path: ^/admin, roles: ROLE_ADMIN }
+
 
 when@test:
     security:
