--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -8,14 +8,13 @@ security:
 
     firewalls:
         dev:
-            pattern: ^/(_(profiler|wdt)|css|images|js)/$
+            pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
             lazy: true
             provider: app_user_provider
             logout:
                 path: app_logout
-                target: app_login
             form_login:
                 login_path: app_login
                 check_path: app_login
@@ -28,7 +27,7 @@ security:
                 lifetime: 604800 # 7 jours en secondes
 
     access_control:
-        - { path: ^/profil, roles: ROLE_USER }
+        - { path: ^/profil }
         - { path: ^/profil/enseignant, roles: ROLE_TEACHER }
         - { path: ^/profil/etudiant, roles: ROLE_STUDENT }
         - { path: ^/admin, roles: ROLE_ADMIN }
